<resources>
    <string name="app_name">易记</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">还没有账户？创建一个吧</string>
    <string name="JiZhang">记账</string>
    <string name="BenYueHuaFei">本月花费</string>
    <string name="ShouRu">收入</string>
    <string name="ZhiChu">支出</string>
    <string name="TongJi">统计</string>
    <string name="GongZuoShouRu">工作收入</string>
    <string name="CunKunLiXi">存款利息</string>
    <string name="CanYinShiPing">餐饮食品</string>
    <string name="YiFuShiPing">衣服饰品</string>
    <string name="XingCheJiaoTong">行车交通</string>
    <string name="DianZiSheBei">电子设备</string>
    <string name="YiXingXiaoFei">异性消费</string>
    <string name="ZhuZhaiZhuangXiu">住宅装修</string>
    <string name="ShenTiJianKang">身体健康</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="dongtai">动态</string>
    <string name="wode">我的</string>

    <string name="XingCheJiaotong">行车交通</string>
    <string name="SheZhi">设置</string>
    <string name="BeiFen">备份</string>
    <string name="HuiFu">恢复</string>
    <string name="GuanYuWoMen">关于我们</string>
    <string name="TouXiang">头像</string>
    <string name="WeiDengLu">未登录</string>
    <string name="HaiMeiYouDengLu">还没有登陆？点击上面</string>
    <string name="zhuxiao">注销</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="jiyibi">记一笔</string>
    <string name="leibie">类别</string>
    <string name="canyinshiping">餐饮食品</string>
    <string name="yifushiping">衣服饰品</string>
    <string name="jujiashenghuo">居家生活</string>
    <string name="xingchejiaotong">行车交通</string>
    <string name="xiuxianyule">休闲娱乐</string>
    <string name="wenhuajiaoyu">文化体育</string>
    <string name="jiankangyiliao">健康医疗</string>
    <string name="touzizhichu">投资支出</string>
    <string name="qitazhichu">其他支出</string>
    <string name="shezhi">设置</string>
    <string name="beizhu">备注</string>
    <string name="shangchuantupianhuopaishezhaopian">上传图片或拍摄照片</string>
    <string name="yaoyiyao">摇一摇</string>
    <string name="yejianmoshi">夜间模式</string>
    <string name="meirijizhangtixing">每日记账提醒</string>
    <string name="qingchuyuyintupainshuju">清除语音图片数据</string>
    <string name="sousuo">搜索</string>
    <string name="gengduo">更多</string>
    <string name="baocun">保存</string>
    <string name="download">下载</string>

</resources>
