<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/textview4"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_gravity="center"
        android:background="@color/pink"
        android:gravity="center"
        android:paddingTop="35dp"
        android:text="0.0"
        android:textColor="@color/black"
        android:textSize="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"></TextView>
    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/BenYueHuaFei"
        android:textColor="@color/black"
        android:textSize="@dimen/small"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textview4"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></TextView>

        <TextView
            android:id="@+id/textview5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/peachpuff"
            android:padding="8dp"
            android:text="@string/ShouRu"
            android:paddingLeft="@dimen/big"
            android:textColor="@color/black"
            android:textSize="@dimen/littlesmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview4"
            app:layout_constraintVertical_bias="0"></TextView>

        <ListView
            android:id="@+id/list_view1"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/lemonchiffon"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview5"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/textview6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/peachpuff"
            android:padding="8dp"
            android:paddingLeft="@dimen/big"
            android:text="@string/ZhiChu"
            android:textColor="@color/black"
            android:textSize="@dimen/littlesmall"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_view1"
            app:layout_constraintVertical_bias="0.0"></TextView>

        <ListView
            android:id="@+id/list_view2"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@color/lemonchiffon"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview6" />
<!--    </ScrollView>-->










</androidx.constraintlayout.widget.ConstraintLayout>